--- a/window.ui
+++ b/window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>690</height>
+    <width>1177</width>
+    <height>689</height>
    </rect>
   </property>
   <property name="acceptDrops">
@@ -16,32 +16,48 @@
   <property name="windowTitle">
    <string>Physics Pendulum</string>
   </property>
-<<<<<<< HEAD
-=======
   <property name="windowIcon">
-   <iconset theme="ico.svg"/>
+   <iconset theme="ico.svg">
+    <normaloff>.</normaloff>.</iconset>
   </property>
->>>>>>> master
   <widget class="QGroupBox" name="animation">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>0</y>
+     <y>4</y>
      <width>520</width>
-     <height>540</height>
+     <height>538</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QGroupBox#animation { 
+border: 1px solid black; 
+margin-top:20px;
+} 
+QGroupBox#animation::title {
+subcontrol-origin: margin;
+subcontrol-position: top left;
+padding: 0px;
+left: 0px;
+}</string>
+   </property>
    <property name="title">
-    <string>  Animation</string>
+    <string>Animation</string>
    </property>
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>30</y>
-      <width>500</width>
-      <height>500</height>
+      <x>0</x>
+      <y>20</y>
+      <width>520</width>
+      <height>518</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QGraphicsView
+{
+     border: 1px solid bleck;
+}</string>
     </property>
    </widget>
   </widget>
@@ -49,19 +65,31 @@
    <property name="geometry">
     <rect>
      <x>540</x>
-     <y>0</y>
-     <width>251</width>
-     <height>541</height>
+     <y>4</y>
+     <width>371</width>
+     <height>416</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QGroupBox#argument { 
+border: 1px solid black; 
+margin-top:20px;
+} 
+QGroupBox#argument::title {
+subcontrol-origin: margin;
+subcontrol-position: top left;
+padding: 0px;
+left: 0px;
+}</string>
+   </property>
    <property name="title">
-    <string>  Argument </string>
+    <string>Argument </string>
    </property>
    <widget class="QGroupBox" name="l1">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>24</y>
+      <y>20</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -86,6 +114,9 @@
      <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
     </property>
     <widget class="QDoubleSpinBox" name="l1_doubleSpinBox">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="geometry">
       <rect>
        <x>5</x>
@@ -100,8 +131,8 @@
        <weight>50</weight>
        <bold>false</bold>
        <underline>false</underline>
-       <stylestrategy>PreferDefault</stylestrategy>
-       <kerning>true</kerning>
+       <stylestrategy>PreferAntialias</stylestrategy>
+       <kerning>false</kerning>
       </font>
      </property>
      <property name="decimals">
@@ -125,7 +156,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>24</y>
+      <y>20</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -168,6 +199,21 @@
        <kerning>true</kerning>
       </font>
      </property>
+     <property name="acceptDrops">
+      <bool>false</bool>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="readOnly">
+      <bool>false</bool>
+     </property>
+     <property name="buttonSymbols">
+      <enum>QAbstractSpinBox::UpDownArrows</enum>
+     </property>
+     <property name="accelerated">
+      <bool>false</bool>
+     </property>
      <property name="minimum">
       <double>-100000.000000000000000</double>
      </property>
@@ -186,7 +232,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>72</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -247,7 +293,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>80</y>
+      <y>72</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -311,7 +357,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>136</y>
+      <y>176</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -393,7 +439,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>136</y>
+      <y>176</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -457,7 +503,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>472</y>
+      <y>350</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -539,7 +585,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>472</y>
+      <y>350</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -626,8 +672,8 @@
    <widget class="QGroupBox" name="Es">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>416</y>
+      <x>250</x>
+      <y>228</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -676,7 +722,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>248</y>
+      <y>300</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -724,8 +770,8 @@
    <widget class="QGroupBox" name="ll">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>304</y>
+      <x>250</x>
+      <y>20</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -780,7 +826,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>360</y>
+      <y>228</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -832,7 +878,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>248</y>
+      <y>300</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -880,8 +926,8 @@
    <widget class="QGroupBox" name="mm">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>360</y>
+      <x>250</x>
+      <y>72</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -932,8 +978,8 @@
    <widget class="QGroupBox" name="Ep">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>300</y>
+      <x>10</x>
+      <y>228</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -982,7 +1028,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>192</y>
+      <y>124</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -1043,7 +1089,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>192</y>
+      <y>124</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -1103,8 +1149,8 @@
    <widget class="QGroupBox" name="pp">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>416</y>
+      <x>250</x>
+      <y>124</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -1152,142 +1198,11 @@
      </property>
     </widget>
    </widget>
-  </widget>
-  <widget class="QGroupBox" name="control">
-   <property name="geometry">
-    <rect>
-     <x>540</x>
-     <y>540</y>
-     <width>251</width>
-     <height>140</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>  Control</string>
-   </property>
-   <widget class="QPushButton" name="start_pushButton">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>30</y>
-      <width>110</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
-    </property>
-    <property name="text">
-     <string>START/STOP</string>
-    </property>
-    <property name="shortcut">
-     <string>S</string>
-    </property>
-    <property name="checkable">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="autor_pushButton">
-    <property name="geometry">
-     <rect>
-      <x>188</x>
-      <y>111</y>
-      <width>52</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Autor</string>
-    </property>
-    <property name="shortcut">
-     <string>A</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="track_pushButton">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>111</y>
-      <width>52</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TRACK</string>
-    </property>
-    <property name="shortcut">
-     <string>T</string>
-    </property>
-    <property name="checkable">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="reset_pushButton">
-    <property name="geometry">
-     <rect>
-      <x>188</x>
-      <y>84</y>
-      <width>52</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>RESET</string>
-    </property>
-    <property name="shortcut">
-     <string>X</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="save_n_pushButton">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>57</y>
-      <width>44</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-<<<<<<< HEAD
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>&lt;pres</string>
-=======
-      <pointsize>6</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>&lt;PRESET</string>
->>>>>>> master
-    </property>
-    <property name="shortcut">
-     <string>D</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="random_pushButton">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>84</y>
-      <width>52</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>RANDOM</string>
-    </property>
-    <property name="shortcut">
-     <string>R</string>
-    </property>
-   </widget>
    <widget class="QGroupBox" name="frame">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>20</y>
+      <x>250</x>
+      <y>300</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -1312,7 +1227,7 @@
      <string/>
     </property>
     <property name="title">
-     <string>  Frame</string>
+     <string>  frame</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
@@ -1347,8 +1262,8 @@
    <widget class="QGroupBox" name="fps">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>80</y>
+      <x>250</x>
+      <y>350</y>
       <width>110</width>
       <height>55</height>
      </rect>
@@ -1405,30 +1320,192 @@
      </property>
     </widget>
    </widget>
-   <widget class="QPushButton" name="save_p_pushButton">
+   <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>196</x>
-      <y>57</y>
-      <width>44</width>
+      <x>10</x>
+      <y>290</y>
+      <width>351</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">Line#argument { 
+border: 1px solid black; 
+margin-top:20px;
+}</string>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QGroupBox" name="control">
+   <property name="geometry">
+    <rect>
+     <x>540</x>
+     <y>420</y>
+     <width>371</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QGroupBox#control { 
+border: 1px solid black; 
+margin-top:20px;
+} 
+QGroupBox#control::title {
+subcontrol-origin: margin;
+subcontrol-position: top left;
+padding: 0px;
+left: 0px;
+}</string>
+   </property>
+   <property name="title">
+    <string>Control</string>
+   </property>
+   <widget class="QPushButton" name="start_pushButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>111</width>
+      <height>35</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>START/STOP</string>
+    </property>
+    <property name="shortcut">
+     <string>S</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="autor_pushButton">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>88</y>
+      <width>61</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Autor</string>
+    </property>
+    <property name="shortcut">
+     <string>A</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="track_pushButton">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>59</y>
+      <width>61</width>
       <height>22</height>
      </rect>
     </property>
     <property name="font">
      <font>
-<<<<<<< HEAD
-      <pointsize>9</pointsize>
+      <pointsize>8</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>pres&gt;</string>
-=======
-      <pointsize>6</pointsize>
+     <string>TRACK</string>
+    </property>
+    <property name="shortcut">
+     <string>T</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="reset_pushButton">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>30</y>
+      <width>71</width>
+      <height>35</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>PRESET&gt;</string>
->>>>>>> master
+     <string>RESET</string>
+    </property>
+    <property name="shortcut">
+     <string>X</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="save_n_pushButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>75</y>
+      <width>111</width>
+      <height>35</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>&lt; PRESET</string>
+    </property>
+    <property name="shortcut">
+     <string>D</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="random_pushButton">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>30</y>
+      <width>81</width>
+      <height>35</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>DejaVu Sans Mono</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>RANDOM</string>
+    </property>
+    <property name="shortcut">
+     <string>R</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="save_p_pushButton">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>75</y>
+      <width>111</width>
+      <height>35</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>PRESET &gt;</string>
     </property>
     <property name="shortcut">
      <string>A</string>
@@ -1437,10 +1514,10 @@
    <widget class="QLineEdit" name="save_lineEdit">
     <property name="geometry">
      <rect>
-      <x>177</x>
-      <y>57</y>
-      <width>16</width>
-      <height>21</height>
+      <x>130</x>
+      <y>75</y>
+      <width>41</width>
+      <height>35</height>
      </rect>
     </property>
     <property name="frame">
@@ -1453,6 +1530,30 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QPushButton" name="log_pushButton">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>30</y>
+      <width>61</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>LOG</string>
+    </property>
+    <property name="shortcut">
+     <string>T</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+   </widget>
    <zorder>save_lineEdit</zorder>
    <zorder>start_pushButton</zorder>
    <zorder>autor_pushButton</zorder>
@@ -1460,38 +1561,56 @@
    <zorder>reset_pushButton</zorder>
    <zorder>save_n_pushButton</zorder>
    <zorder>random_pushButton</zorder>
-   <zorder>frame</zorder>
-   <zorder>fps</zorder>
    <zorder>save_p_pushButton</zorder>
+   <zorder>log_pushButton</zorder>
   </widget>
-  <widget class="QGroupBox" name="groupBox">
+  <widget class="QGroupBox" name="output">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>540</y>
-     <width>521</width>
+     <y>544</y>
+     <width>901</width>
      <height>140</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QGroupBox#output { 
+border: 1px solid black; 
+margin-top:20px;
+} 
+QGroupBox#output::title {
+subcontrol-origin: margin;
+subcontrol-position: top left;
+padding: 0px;
+left: 0px;
+}</string>
+   </property>
    <property name="title">
-    <string>  Output</string>
+    <string>Output</string>
    </property>
    <widget class="QTextEdit" name="textEdit">
     <property name="geometry">
      <rect>
       <x>2</x>
       <y>22</y>
-      <width>518</width>
+      <width>897</width>
       <height>117</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>7</pointsize>
+      <family>Monospace</family>
+      <pointsize>9</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="inputMethodHints">
      <set>Qt::ImhNone</set>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::NoFrame</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
@@ -1502,6 +1621,12 @@
     <property name="horizontalScrollBarPolicy">
      <enum>Qt::ScrollBarAsNeeded</enum>
     </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustIgnored</enum>
+    </property>
+    <property name="lineWrapMode">
+     <enum>QTextEdit::NoWrap</enum>
+    </property>
     <property name="lineWrapColumnOrWidth">
      <number>1</number>
     </property>
@@ -1511,18 +1636,8 @@
     <property name="tabStopWidth">
      <number>100</number>
     </property>
-   </widget>
-   <widget class="QCheckBox" name="checkBox">
-    <property name="geometry">
-     <rect>
-      <x>504</x>
-      <y>3</y>
-      <width>23</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
+    <property name="acceptRichText">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
